# advent-of-code

./: .coveragerc  .gitignore  Dockerfile  Makefile  Makefile.docker  Makefile_docker  README.md  pyproject.toml  setup.cfg
.github/workflows/: action_cov.yml
advent_of_code/: config.py  helpers.py  logging.py
advent_of_code/year_2021/day01/: part_1.py  part_2.py
advent_of_code/year_2021/day02/: part_1.py  part_2.py
advent_of_code/year_2021/day_02/: part_1.py  part_2.py
advent_of_code/year_2022/day01/: part_1.py  part_2.py
advent_of_code/year_2022/day02/: part_2.py
advent_of_code/year_2022/day_01/: part_1.py  part_2.py
advent_of_code/year_2022/day_02/: part_1.py  part_2.py
advent_of_code/year_2022/day_03/: part_1.py  part_2.py
advent_of_code/year_2022/day_04/: part_1.py  part_2.py
advent_of_code/year_2022/day_05/: part_1.py  part_2.py
advent_of_code/year_2022/day_06/: part_1.py  part_2.py
advent_of_code/year_2022/day_07/: part_1.py  part_2.py
advent_of_code/year_2022/day_08/: part_1.py  (+1 more)
tests/: __init__.py  test_config.py  utils.py
tests/2021/: __init__.py  test_day01.py  test_day02.py  test_day_01.py  test_day_02.py
tests/2022/: test_day01.py  test_day02.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py
tests/2023/: test_day_01.py  test_day_02.py  test_day_03.py
(+32 files in other folders)
