[metadata]
name = advent_of_code
home_page = https://github.com/x0s/advent_of_code
summary = Advent for coders
description_file = README.md
author = x0s
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
install_requires = 
    requests
    coverage